Cleaned up BootListener and added to its intent-filter

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -131,6 +131,9 @@
         <receiver android:name=".listeners.BootListener" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+                <action android:name="android.intent.action.DATE_CHANGED" />
+
             </intent-filter>
         </receiver>
         <receiver android:name=".listeners.SmsReceivedLogger" >
