--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,4 +83,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.commonsware.cwac:anddown:0.3.0'
     compile 'io.sentry:sentry-android:1.7.3'
+    compile 'com.madgag.spongycastle:core:1.54.0.0'
 }
