--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,18 @@
 apply plugin: 'com.android.application'
-
 def keystorePropertiesFile = rootProject.file("private/keystore.properties");
 def keystoreProperties = new Properties()
 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
-
 android {
     signingConfigs {
         config {
-            storeFile file(keystoreProperties['storeFile'])
-            keyAlias keystoreProperties['keyAlias']
-            keyPassword keystoreProperties['keyPassword']
-            storePassword keystoreProperties['storePassword']
+            keyAlias 'keyMyFirstAndroidApp'
+            keyPassword 'Password'
+            storeFile file('/Users/xuancong/projects/keystores/MyFirstAndroidApp.jks')
+            storePassword 'Password'
         }
     }
-    compileSdkVersion 26
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 28
+    buildToolsVersion '29.0.0 rc2'
     defaultConfig {
         applicationId "org.beiwe.app"
         minSdkVersion 16
@@ -27,28 +25,31 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
-            signingConfig signingConfigs.config
             manifestPlaceholders = [appNameSuffix: ""]
             buildConfigField("boolean", "APP_IS_BETA", "false")
             buildConfigField("boolean", "APP_IS_DEV", "false")
             buildConfigField("String", "SENTRY_DSN", "\"" + keystoreProperties['releaseDSN'] + "\"")
+            signingConfig signingConfigs.config
         }
         beta {
             versionNameSuffix("-beta")
-            signingConfig signingConfigs.config
             manifestPlaceholders = [appNameSuffix: "-beta"]
             buildConfigField("boolean", "APP_IS_BETA", "true")
             buildConfigField("boolean", "APP_IS_DEV", "false")
             buildConfigField("String", "SENTRY_DSN", "\"" + keystoreProperties['betaDSN'] + "\"")
+            signingConfig signingConfigs.config
         }
         development {
             versionNameSuffix("-development")
-            signingConfig signingConfigs.config
             manifestPlaceholders = [appNameSuffix: "-development"]
             buildConfigField("boolean", "APP_IS_BETA", "true")
             buildConfigField("boolean", "APP_IS_DEV", "true")
             buildConfigField("String", "SENTRY_DSN", "\"" + keystoreProperties['developmentDSN'] + "\"")
             debuggable true
+            signingConfig signingConfigs.config
+        }
+        debug {
+            signingConfig signingConfigs.config
         }
     }
     flavorDimensions "customizableServerUrl"
@@ -68,7 +69,7 @@ android {
 }
 // Don't include the default "debug" build variant as an option
 android.variantFilter { variant ->
-    if(variant.buildType.name.equals('debug')) {
+    if (variant.buildType.name.equals('debug')) {
         variant.setIgnore(true);
     }
 }
@@ -80,8 +81,8 @@ repositories {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.commonsware.cwac:anddown:0.3.0'
-    compile 'io.sentry:sentry-android:1.7.3'
-    compile 'com.madgag.spongycastle:core:1.54.0.0'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.commonsware.cwac:anddown:0.3.0'
+    implementation 'io.sentry:sentry-android:1.7.3'
+    implementation 'com.madgag.spongycastle:core:1.54.0.0'
 }
