--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,5 @@ dependencies {
     implementation 'com.commonsware.cwac:anddown:0.3.0'
     implementation 'io.sentry:sentry-android:1.7.23'
     implementation 'com.madgag.spongycastle:core:1.58.0.0'
+    implementation "com.google.android.gms:play-services-vision:11.8.0"
 }
