--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,10 @@ android {
         }
     }
     useLibrary "org.apache.http.legacy"
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
 }
 // Don't include the default "debug" build variant as an option
 android.variantFilter { variant ->
@@ -83,7 +87,7 @@ repositories {
 dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.commonsware.cwac:anddown:0.3.0'
-    implementation 'io.sentry:sentry-android:1.7.23'
+    implementation 'io.sentry:sentry-android:1.7.26'
     implementation 'com.madgag.spongycastle:core:1.58.0.0'
-    implementation "com.google.android.gms:play-services-vision:11.8.0"
+    implementation 'com.google.android.gms:play-services-vision:15.0.0'
 }
