--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
     <uses-feature android:name="android.hardware.camera.flash" />
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
         android:label="${appName}${appNameSuffix}"
         android:theme="@style/AppTheme" >
